# pyfgaws

./: .codecov.yml  README.md  conda-requirements-dev.txt  conda-requirements.txt  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pythonpackage.yml
ci/: check.sh
pyfgaws/: __init__.py  __main__.py
pyfgaws/batch/: __init__.py  api.py  tools.py  waiters.json
pyfgaws/batch/tests/: test_api.py
pyfgaws/core/: __init__.py  logging.py
pyfgaws/core/tests/: test_core.py
pyfgaws/logs/: __init__.py  api.py  tools.py
pyfgaws/logs/tests/: test_api.py
pyfgaws/tests/: __init__.py  test_main.py
pyfgaws/util/: __init__.py
pyfgaws/util/tests/: test_util.py
