[tool.poetry]
name = "pyfgaws"
version = "0.0.1"
description = "Tools and python libraries for working with AWS."
authors = ["Nisl Homer"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^19.3.0"
defopt = "^6.0"
boto3 = "^1.13.18"
botocore = "^1.13.18"
boto3-stubs = {extras = ["batch", "logs"], version = "^1.13.19"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
mypy = "^0.770"
flake8 = "^3.8.1"
black = "^19.10b0"
pytest-cov = ">=2.8.1"

[tool.poetry.scripts]
fgaws-tools = "pyfgaws.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
