[tool.poetry]
name = "pyfgaws"
version = "0.1.4"
description = "Tools and python libraries for working with AWS."
authors = ["Nils Homer", "Tim Fennell"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fulcrumgenomics/pyfgaws"
repository = "https://github.com/fulcrumgenomics/pyfgaws"
keywords = ["aws", "bioinformatics"]
classifiers = [
	"Development Status :: 3 - Alpha",
    "Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.8"
attrs = "^19.3.0"
defopt = "^6.0"
boto3 = "^1.13.18"
botocore = "^1.13.18"
boto3-stubs = {extras = ["batch", "logs"], version = "^1.13.19"}
namegenerator = "^1.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
mypy = "^0.770"
flake8 = "^3.8.1"
black = "^19.10b0"
pytest-cov = ">=2.8.1"

[tool.poetry.scripts]
fgaws-tools = "pyfgaws.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
